fixed mega-nav z-index

--- a/static/stylesheets/theme_us.css
+++ b/static/stylesheets/theme_us.css
@@ -163,7 +163,7 @@
   border-bottom: 0;
   box-shadow: none;
   color: #fff;
-  z-index: 99;
+  z-index: 1300;
   font-size: .8em;
   margin-top: 3px;
 }
@@ -278,6 +278,7 @@ h4.audit {
         position: fixed;
         top: 56px;
         box-shadow: 1px 1px 2px #726464;
+        z-index: 2000;
     }
     .mega-tab, .mega-tab[aria-expanded="true"]:hover {
        border-bottom: 1px solid transparent;
